fix spacing for statblock editor buttons

--- a/lesscss/components/statblock-editor.less
+++ b/lesscss/components/statblock-editor.less
@@ -45,6 +45,10 @@
       padding: @medium-spacer 0;
     }
   }
+
+  .fa-clickable {
+    padding: @medium-spacer;
+  }
 }
 
 .inline {
@@ -89,7 +93,7 @@
 
 .autohide-field__open-button,
 .autohide-field__drop-button {
-  margin-bottom: @medium-spacer;
+  margin-bottom: 0.75rem;
 }
 
 .c-statblock-editor__save-as {
